tests/snapshots/bits_2_bits__std08_empty_loop.snap
---
source: tests/bits_2_bits.rs
expression: s
---
meta {
    unknown: 0,
    stage_name: "dm",
    bgm_names: ["dm", "dm", " ", " "],
    bgm_paths: ["bgm/th08_08.mid", "bgm/th08_09.mid", " ", " "],
    objects: [],
    instances: [],
}

script main {
+10: // 10
    posKeyframe(0.0, 0.0, 0.0);
    loop {
    }
    posKeyframe(0.0, 0.0, 0.0);
}

