tests/snapshots/bits_2_bits__std08_loop_not_timeof.snap
---
source: tests/bits_2_bits.rs
expression: s
---
#pragma mapfile "map/any.stdm"

meta {
    unknown: 0,
    stage_name: "dm",
    bgm: [
        {path: "bgm/th08_08.mid", name: "dm"},
        {path: "bgm/th08_09.mid", name: "dm"},
        {path: " ", name: " "},
        {path: " ", name: " "},
    ],
    objects: {},
    instances: [],
}

script main {
    up(0.0, 1.0, -1.0);
+10: // 10
    up(0.0, 1.0, -1.0);
label_40:
    pos(0.0, 4984.0, 20.0);
    posTime(1024, 0);
    pos(0.0, 5240.0, 20.0);
+1024: // 1034
    goto label_40 @ 200;
-1:
    posKeyframe(0.0, 0.0, 0.0);
}

